@@ -1,10 +1,10 @@
 {
-   "abstract" : "Suddenly death (çªç¶ã®æ­») generator",
+   "abstract" : "ASCII Art of sudden death (çªç¶ã®æ­») generator",
    "author" : [
       "papix <mail@papix.net>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Minilla/v0.3.1, CPAN::Meta::Converter version 2.130880",
+   "generated_by" : "Minilla/v0.5.0, CPAN::Meta::Converter version 2.131490",
    "license" : [
       "perl_5"
    ],
@@ -27,7 +27,6 @@
    "prereqs" : {
       "build" : {
          "requires" : {
-            "Encode" : "2.39",
             "Test::More" : "0.98"
          }
       },
@@ -43,13 +42,16 @@
             "Test::CPAN::Meta" : "0",
             "Test::MinimumVersion" : "0.10108",
             "Test::Pod" : "1.41",
-            "Test::Spellunker" : "v0.2.2"
+            "Test::Spellunker" : "v0.2.7"
          }
       },
       "runtime" : {
          "requires" : {
+            "Encode" : "2.39",
+            "Exporter" : "0",
             "Text::VisualWidth" : "0.02",
-            "base" : "0"
+            "parent" : "0",
+            "perl" : "5.008009"
          }
       }
    },
@@ -65,5 +67,5 @@
          "web" : "https://github.com/papix/Acme-SuddenlyDeath"
       }
    },
-   "version" : "0.04"
+   "version" : "0.05"
 }
